exports[`authReducer should handle LOGIN_ERROR 1`] = `
Object {
  "user": Object {
    "data": Object {},
    "error": "login-error",
    "isLoggedIn": false,
    "token": "",
  },
}
`;

exports[`authReducer should handle LOGIN_SUCCESS 1`] = `
Object {
  "user": Object {
    "data": "testuser",
    "error": "",
    "isLoggedIn": true,
    "token": "testtoken",
  },
}
`;

exports[`authReducer should handle LOGOUT 1`] = `
Object {
  "user": Object {
    "data": Object {},
    "isLoggedIn": false,
    "token": "",
  },
}
`;

exports[`authReducer should handle REGISTER_ERROR 1`] = `
Object {
  "user": Object {
    "data": Object {},
    "error": "register-error",
    "isLoggedIn": false,
    "token": "",
  },
}
`;

exports[`authReducer should return initial state 1`] = `
Object {
  "user": Object {
    "data": Object {},
    "error": Object {},
    "isLoggedIn": false,
    "token": "",
  },
}
`;
